@@ -2,7 +2,7 @@ Source: vulkan-loader
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Timo Aaltonen <tjaalton@debian.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 11),
  cmake,
  libwayland-dev,
  libx11-dev,
