@@ -13,6 +13,7 @@ vulkan-loader (1.1.82.0-1) UNRELEASED; urgency=medium
   * d/s/include-binaries: Removed, obsolete.
   * control: Add vulkan-headers to -dev depends.
   * dirs: Add /etc/vulkan/icd.d.
+  * Use compat level 11.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 01 Aug 2018 12:20:09 +0300
 
